--- a/shared_drawer/templates/base.html
+++ b/shared_drawer/templates/base.html
@@ -6,6 +6,13 @@
 	<title>Document</title>
 </head>
 <body>
+	{% if user.is_authenticated %}
+		<form method="post" action="{% url 'logout' %}">
+			{% csrf_token %}
+			{{ form }}
+			<button type="submit">Logout</button>
+		</form>
+	{% endif %}
 	{% block content %}
 	{% endblock content %}
 </body>
