aded dashboard and items

--- a/shared_drawer/dashboard/templates/dashboard/index.html
+++ b/shared_drawer/dashboard/templates/dashboard/index.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-  This is the dashboard
+  <h1>Dashboard</h1>
+  <a href="#">
+    <div>
+        Items | {{ items_count }}
+    </div>
+  </a>
 {% endblock content %}
